anvio/data/interactive/css/charts.css
@import url('normalize.css');

#display-container {
    width: 1200px; //this is being overwritten though.
    margin: 0 auto 20px auto;
    background: rgba(255,255,255,0.5);
    box-shadow: 1px 1px 4px rgba(0,0,0,0.2);
    padding: 20px 30px;
}

#chart-container {
  position: absolute;
  z-index: 1;
}

#context-container {
  position: fixed;
  bottom: 0;
  background: rgba(255,255,255,.80);
  border-top: 1px solid #ccc;
  z-index: 2;
}

#highlight-boxes {
  z-index: 3;
  position: relative;
}

#display-container h2 {
    color: #444;
    margin: 0 0 10px;
    font-weight: 300;
    padding: 10px;
    text-shadow: 0 1px 1px rgba(255,255,255,0.8);
    font-size: 24px;
}

#toggle-panel-settings {
    position: fixed;
    height: 100px;
    width: 15px;
    background-color: #EEEEEE;
    border: solid 1px #DDDDDD;
    top: calc(40%);
    border-radius: 10px 0px 0px 10px;
    cursor: pointer;
    font-size: 10px;
    padding-top: 14px;
    right: 0px;
}

#settings-panel {
  	display: none;
    top: 0px;
    right: 0px;
    position: fixed;
    height: 100%;
    background: url('../images/fractal.jpg') center center scroll;
    border-left: 1px solid #D3D3D3;
    opacity: 0.9;
    width: 490px;
    padding: 10px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    overflow-y: scroll;
}

#settings-panel code {
	  padding: 1.4px 2px;
    font-size: 90%;
    color: #c7254e;
    background-color: #f3f3f3;
    border-radius: 2px;
}

svg {
    font-family: 'Lato', Arial, serif;
    font-size: 10px;
    font-weight: 700;
    text-shadow: 0 1px 1px rgba(255,255,255,0.8);
}

text.sample-title {
    font-size: 20px;
}

g.context g.brush rect.background {
    fill: rgba(0,0,0,.1);
}

g.context g.axis path {
    stroke-opacity: 0;
}

g.context g.axis line {
    stroke-opacity: .5;
}

.axis path, .axis line {
    fill: none;
    stroke: #aaa;
    shape-rendering: crispEdges;
}

.brush .extent {
    stroke: black;
    fill-opacity: .125;
    shape-rendering: crispEdges;
}

g.context rect.background{
    fill: rgb(200,200,255);
    visibility: visible !important;
}



/* General Demo Style */
body{
    font-family: 'Lato', Arial, serif;
    font-weight: 300;
    font-size: 14px;
    color: #888;
    -webkit-font-smoothing: antialiased;
}

a{
    color: #722;
    text-decoration: none;
}
.container{
    width: 100%;
    position: relative;
}
.clr{
    clear: both;
    padding: 0;
    height: 0;
    margin: 0;
}
.main{
    width: 90%;
    margin: 0 auto;
    position: relative;
}
.container > header{
    margin: 10px;
    padding: 20px 10px 10px 10px;
    position: relative;
    display: block;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
    text-align: center;
}
.container > header h1{
    font-size: 30px;
    line-height: 32px;
    margin: 0;
    position: relative;
    font-weight: 300;
    color: #666;
    text-shadow: 1px 1px 1px rgba(255,255,255,0.7);
}
.container > header p{
    margin: 0;
    padding: 15px 0 5px 0;
    color: #888;
    text-shadow: 1px 1px 1px rgba(255,255,255,0.7);
}
/* Header Style */
.codrops-top{
    line-height: 24px;
    font-size: 11px;
    background: #fff;
    background: rgba(255, 255, 255, 0.5);
    text-transform: uppercase;
    z-index: 9999;
    position: relative;
    font-family: Cambria, Georgia, serif;
    box-shadow: 1px 0px 2px rgba(0,0,0,0.2);
}
.codrops-top a{
    padding: 0px 10px;
    letter-spacing: 1px;
    color: #333;
    display: inline-block;
}
.codrops-top a:hover{
    background: rgba(255,255,255,0.6);
}
.codrops-top span.right{
    float: right;
}
.codrops-top span.right a{
    float: left;
    display: block;
}

.colorpicker {
    float: left;
    display: inline-block;
    background-color: #FFF;
    border: 1px solid;
    border-color: #000;
    width: 16px;
    height: 16px;
    margin: auto;
}

.colorpicker:hover {
    border: 2px solid;
    border-color: #555;
}

.search-results {
    padding: 20px;
    font-size: 12px;
}

.toggle-panel-settings-pos {
    right: 490px !important;
}

.alert-box {
  	padding: 15px;
    margin-top: 10px;
    margin-bottom: 10px;
    border: 1px solid transparent;
    border-radius: 4px;
}

.nucl-activated {
    color: #3c763d;
    background-color: #dff0d8;
    border-color: #d6e9c6;
    display: none;
}

.nucl-deactivated {
    color: #a94442;
    background-color: #f2dede;
    border-color: #ebccd1;
    display: none;
}

.noselect {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
   pointer-events: none;
}

.highlightbox:hover {
  fill-opacity: 0.25;
}

.highlightbox:mouseleave {
  fill-opacity: 0;
}

